feat: exception handling and documentations added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/assembly_schema
+spring.datasource.username=root
+url.user-info=https://user-info.herokuapp.com
