--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation('io.springfox:springfox-swagger-ui:2.9.2')
     implementation('io.springfox:springfox-swagger2:2.9.2')
     implementation('mysql:mysql-connector-java:8.0.21')
-    implementation('com.jason-goodwin:better-monads:0.4.1')
+    implementation('org.apache.commons:commons-lang3:3.7')
     implementation('org.springframework.boot:spring-boot-starter-validation')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
