env: add docker and docker-compose configurations

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-/build/
-/bin/
-/logs/
-.DS_Store
 .gradle
 .settings
 .classpath
 .project
-.DS_Store
-.metadata/
-out/
+.metadata
+.idea
 *.iml
-.idea/
-version.properties
+/out
+/build
+/bin
