feat: add rabbit event with results and rabbit container

--- a/assembly-service/src/main/resources/application.properties
+++ b/assembly-service/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.datasource.url=jdbc:mysql://assembly-db:3306/assembly?allowPublicKeyRetrieval=true
 spring.datasource.username=admin
 spring.datasource.password=admin
+spring.rabbitmq.host=assembly-rabbitmq
+spring.rabbitmq.password=rabbit
+spring.rabbitmq.username=rabbit
+spring.rabbitmq.port=5672
+rabbit.exchange.session-results=exchange-voting-results
+rabbit.routing-key.session-results=voting-results
 url.user-info=https://user-info.herokuapp.com
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=error
