--- a/assembly-service/src/main/resources/application.properties
+++ b/assembly-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://assembly-db:3306/assembly?allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${ASSEMBLY_DB_URL:localhost}:3306/assembly?allowPublicKeyRetrieval=true
 spring.datasource.username=admin
 spring.datasource.password=admin
-spring.rabbitmq.host=assembly-rabbitmq
+spring.rabbitmq.host=${ASSEMBLY_RABBIT_URL:localhost}
 spring.rabbitmq.password=rabbit
 spring.rabbitmq.username=rabbit
 spring.rabbitmq.port=5672
