feat: add pitest for better test validation

--- a/assembly-service/build.gradle
+++ b/assembly-service/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'org.springframework.boot' version '2.3.1.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
+    id 'info.solidsoft.pitest' version '1.5.1'
 }
 
 group = 'com.deividsantos'
@@ -21,6 +22,7 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.amqp:spring-rabbit')
+    testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.7'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
@@ -28,4 +30,16 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+pitest {
+    junit5PluginVersion = '0.12'
+}
+
+pitest {
+    targetClasses = ['com.deividsantos.assembly.*']  //by default "${project.group}.*"
+    pitestVersion = '1.4.7' //not needed when a default PIT version should be used
+    threads = 4
+    outputFormats = ['XML', 'HTML']
+    timestampedReports = false
 }
